ingress.yml
# With ingress we can route the traffic to the cluster
# We can use the ingress to route the traffic to the service
# If the user access the LB, then we will use ALB ingress controller , to forward the traffic to the service-2048
# Service-2048 forwards the test traffic to the deployment 

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: game-2048
  name: ingress-2048
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: service-2048
              port:
                number: 80
